dnl configure script
                                                                                
AC_INIT(calc.c)
AM_INIT_AUTOMAKE(calc, 1.2)
                                                                                
dnl AC_CONFIG_SRCDIR(calc.c)
AM_CONFIG_HEADER(config.h)
                                                                                
AC_PROG_CC
AC_PROG_INSTALL
AC_CHECK_LIB(m,cos)
AC_CHECK_LIB(readline,readline)
AC_OUTPUT(Makefile)
